css/main.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
}

html {
    overflow-x: hidden;
}

/* Typography ----------------------------------- */

body {
    overflow-x: hidden;
    background-color: #fff;
    font-family: "Inconsolata", "Helvetica Neue", sans-serif;
}

h1 {
    font-family: "heading", "Helvectica Neue", serif;
    font-size: 40px;
}

p {
    font-size: 14px;
}

li {
    list-style: none;
}

ul {
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
    color: #000;
}

i {
    width: 17px;
    background-image: url(../images/arrow.svg);
    background-repeat: no-repeat;
    margin-left: 30px;
    float: right;
    top: 1px;
    position: relative;
}

.hero-container h1 {
    opacity: 0;
    font-size: 40px;
    padding: 8% 8px 4px 8px;
    animation: fadeIn 2s forwards;
    animation-delay: 0.1s;
    display: inline-block;
    position: relative;
    z-index: 2;
}

.hero-paragraph {
    opacity: 0;
    font-size: 15px;
    display: block;
    line-height: 1.9;
    margin: 40px auto;
    max-width: 310px;
    padding: 3px 0 3px 8px;
    animation: fadeIn 0.8s forwards;
    animation-delay: 0.5s;
}

@media (min-width: 500px) {
    .hero-paragraph {
        max-width: 450px;
    }
    .hero-container h1 {
        max-width: none;
    }
}

@media (min-width: 750px) {
    h1 {
        font-size: 53px !important;
    }
    .hero-paragraph {
        max-width: 500px;
    }
}

@media (min-width: 1000px) {
    .hero-paragraph {
        margin: 40px auto 0 58%;
        text-align: left;
    }
    h1 {
        font-size: 63px !important;
    }
    .hero-paragraph {
        max-width: 310px;
    }
}

/* Layout ----------------------------------- */

.outer-container {
    margin: 0 auto;
}

.hero-container {
    height: 100vh;
    text-align: center;
    overflow-x: hidden;
}

header a {
    font-size: 14px;
}

header p {
    margin-top: 10px;
}

header {
    font-size: 14px;
    opacity: 0;
    animation: fadeIn 1s forwards;
    max-width: 1100px;
    margin: auto;
    width: 100%;
    padding: 30px 50px;
}

header a {
    text-decoration: underline;
}

@media(min-width: 550px) {
    header,
    header a {
        font-size: 16px;
    }
    header p {
        float: right;
        margin-top: 0;
    }
    header div:first-of-type {
        float: left;
        text-align: left;
    }
}

@media (min-width: 1000px) {
    header {
        padding: 50px 20px;
    }
    header a {
        animation: fadeInSlideRight 5s forwards;
    }
}

/* Hero Images ----------------------------------- */
.skillzsqaure {
    display: inline-block;
    font-size: 18px;
    width: 280px;
    height: 230px;
    padding: 20px 0 0 15px;
    line-height: 29px;
    font-family: "heading", "Helvectica Neue", serif;
    text-align: left;
    /*background-color: rgba(255,255,255,0);*/
    background-color: #F2FFFF;
    opacity: 0;
    position: absolute;
    margin: auto;
    top: 43%;
    right: 40%;
    left: -2%;
    animation: fadeInSlideLeft 0.4s forwards;
    animation-delay: 0.3s;
}

.fernsquare,
.fernsquare-orange {
    max-width: 270px;
    opacity: 0;
    position: absolute;
    margin: auto;
    top: 30%;
    right: -10px;
    left: 0;
    z-index: -2;
    animation: fadeInSlideLeft 0.8s forwards;
    animation-delay: 0.6s;
}

.fernsquare {
    display: none;
}

.fernsquare-orange {
    display: inline-block;
}

.computersquare {
    max-width: 270px;
    opacity: 0;
    display: none;
    position: absolute;
    margin: auto;
    left: 2%;
    right: 0;
    top: 40%;
    z-index: -1;
    animation: fadeInSlideRight 0.8s forwards;
    animation-delay: 0.6s;
}

/*arrow container*/
.hero-container figure {
    position: relative;
    opacity: 0;
    animation: fadeInSlideDown 1s forwards;
    animation-delay: 0.7s;
    top: 50%;
}

.arrow-image {
    width: 20px;
    animation: slideUpAndDown infinite 3s;
}

@media(min-width: 550px) {
    .skillzsqaure {
        left: 0;
        width: 378px;
        height: 310px;
        font-size: 25px;
        padding: 35px 0 0 50px;
        line-height: 39px;
        background-color: #F2FFFF;
    }
    .fernsquare {
        top: 20%;
        max-width: none;
        right: -35%;
        display: inline-block;
    }
    .fernsquare-orange {
        display: none;
    }
    .computersquare {
        top: 38%;
        max-width: none;
        display: inline-block;
        left: 10%;
    }
    .arrow-image {
        width: 30px;
    }
    .hero-container figure {
        top: 35%;
        left: 28%;
    }
}

@media(min-width: 1000px) {
    .hero-container figure {
        animation-delay: 2s;
        left: 23%;
    }
    .fernsquare {
        top: 18%;
        right: -35%;
        left: 0;
    }
}

/*@media only screen and (-Webkit-min-device-pixel-ratio: 1.5),
only screen and (-moz-min-device-pixel-ratio: 1.5),
only screen and (-o-min-device-pixel-ratio: 3/2),
only screen and (min-device-pixel-ratio: 1.5) {

}*/

.tldr {
    font-family: "heading", "Helvectica Neue", serif;
    font-size: 18px;
    margin: 50px auto 80px auto;
    line-height: 42px;
    max-width: 1100px;
    padding: 0 30px;
    display: block;
    width: 100%;
}

@media (min-width: 550px) {
    .tldr {
        margin: 80px auto;
        font-size: 25px;
        line-height: 52px;
        padding: 0 20px;
    }
}

/* Work Section ----------------------------------- */
.work-items-container {
    animation: fadeIn 1.5s forwards;
}

.work-items-container h1 {
    padding-bottom: 35px;
    text-align: center;
}

.work-items-container ul {
    margin-bottom: 100px;
}

.work-items-container a {
    display: block;
    transition: 0.2s;
}

.work-items-container li {
    font-size: 14px;
    margin: 0 auto;
    padding: 40px 20px;
    max-width: 1100px;
    list-style: none;
}

.work-items-container i {
    float: none;
    margin-left: 2px;
    background-size: 15px;
    width: 20px;
    display: inline-block;
}

.work-items-container a:hover {
    background-color: #F2FFFF;
    transition: 0.2s;
}

.work-items-container span  {
    display: block;
    text-align: center;
}

.work-items-container li span:nth-child(2n) {
    display: none;
    position: relative;
    top: 1px;
    margin-left: 10px;
    padding-right: 50px;
    animation: slideLeftXsm 0.2s forwards;
}

.work-items-container li span:nth-child(3n) {
    margin-top: 10px;
}

.work-items-container-second-span-hover {
    display: none;
    animation: slideLeft 0.8s forwards;
}

@media (min-width: 550px) {
    .work-items-container li {
        font-size: 16px;
    }
    .work-items-container-second-span-hover {
        display: inline-block !important;
    }
    .work-items-container span  {
        display: inline-block;
    }
    .work-items-container li span:nth-child(3n) {
        float: right;
    }
    .work-items-container i {
        float: right;
        margin-left: 30px;
    }
    .work-items-container li span:nth-child(3n) {
        margin-top: 0;
    }
}

/* Footer ----------------------------------- */

footer {
    display: block;
    animation: fadeIn 1.5s forwards;
    font-size: 14px;
}

footer li {
    font-size: 14px;
}

.footer-image {
    position: relative;
    display: none;
    z-index: 99;
    bottom: -4px;
}

@media (min-width: 550px) {
    footer,
    footer li {
        font-size: 16px;
    }
}

@media (min-width: 750px) {
    .footer-image {
        left: 32%;
    }
}

@media (min-width: 1000px) {
    .footer-image {
        left: 35%;
        display: inline-block;
    }
}

@media (min-width: 1200px) {
    .footer-image {
        left: 39%;
    }
}

@media (min-width: 1450px) {
    .footer-image {
        left: 42%;
    }
}

.footer-right-rectangle {
    display: none;
    background-color: #CAE6E0;
    position: absolute;
    bottom: -57px;
    right: 0;
    height: 300px;
    width: 50%;
}

.footer-left-rectangle {
    display: none;
    background-color: #FFE9CD;
    position: absolute;
    bottom: -57px;
    left: -20px;
    height: 180px;
    width: 54%;
}

.footer-text-container {
    max-width: 1100px;
    position: relative;
    bottom: 30px;
    padding: 40px 20px;
    margin: 0 auto 0 auto;
    animation: fadeIn 2s forwards;
}

.footer-text-container h1 {
    text-align: center;
}

.footer-text-container ul {
    display: block;
    left: 280px;
}

.footer-text-container i {
    margin-left: 10px;
}

.footer-mailto {
    text-decoration: underline;
    text-align: center;
    position: static;
    top: 0;
    margin: 50px 0;
    display: block;
}

.footer-text-container li {
    text-align: center;
    min-width: 110px;
    cursor: pointer;
    list-style: none;
}

.footer-text-container ul a {
    max-width: 180px;
    text-align: left;
    display: block;
    padding: 10px 0;
    margin: auto;
    width: 107px;
}

@media (min-width: 550px) {
    .footer-left-rectangle,
    .footer-right-rectangle {
        display: inline-block;;
    }
    .footer-text-container {
        overflow: auto;
        margin: 0 auto 0 auto;
    }
    .footer-text-container h1 {
        display: none;
    }
    .footer-text-container ul {
        float: right;
        margin-top: 32px;
        display: block;
    }
    .footer-text-container ul a {
        width: 100%;
    }
    .footer-text-container i {
        margin-left: 30px;
    }
    .footer-mailto {
        display: inline;
        position: relative;
        top: 153px;
        width: 50%;
        margin-top: 180px;
        margin-bottom: 0;
        text-align: left;
    }
}

@media (min-width: 1000px) {
    .footer-text-container {
        padding: 40px 20px;
    }
}

/* Animations ----------------------------------- */

.slideLeft {
    animation: slideLeft 0.5s forwards;
}

.slideRight {
    animation: slideRight 0.5s forwards;
}

.slideLeftSm {
    animation: slideLeftSm 0.2s forwards;
}

.slideRightSm {
    animation: slideRightSm 0.2s forwards;
}

.sway {
    animation: sway 2s infinite;
}

